Adjust Api for landing page and Add new field description on master-Membership
